[BEAM-8470] Fix warning in coder construction by reflexion